// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change gap 1`] = `
<DocumentFragment>
  <div
    class="css-rj19mw"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-18j4d10"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;
